tests/kubernetes/custom-5.4.5/compliant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: compliant-svc
  annotations:
    tls: "enabled"
